<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/debtText"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/debtAount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/debtIn"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/debtText"
        tools:layout_editor_absoluteX="52dp" />

    <EditText
        android:id="@+id/ınterestText"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/intRate"
        app:layout_constraintStart_toEndOf="@+id/debtText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rateIn"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/debtIn"
        app:layout_constraintTop_toBottomOf="@+id/ınterestText" />

    <Button
        android:id="@+id/calculateBut"
        android:layout_width="188dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/calcualte"
        app:layout_constraintBottom_toTopOf="@+id/fiveYout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtIn"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/twentyfiveYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyYout" />

    <EditText
        android:id="@+id/fiveYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="285dp" />

    <EditText
        android:id="@+id/thirtyYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyfiveYout" />

    <EditText
        android:id="@+id/fifteenYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fifteenY"
        app:layout_constraintBottom_toBottomOf="@+id/fifteenYout"
        app:layout_constraintEnd_toStartOf="@+id/fifteenYout"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenYtext"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tenYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tenY"
        app:layout_constraintEnd_toStartOf="@+id/tenYout"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveYtext" />

    <EditText
        android:id="@+id/twentyYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/twentyY"
        app:layout_constraintEnd_toEndOf="@+id/fifteenYtext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenYtext" />

    <EditText
        android:id="@+id/fifteenYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenYout" />

    <EditText
        android:id="@+id/twentyYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/twentyYtext"
        app:layout_constraintTop_toBottomOf="@+id/fifteenYout" />

    <EditText
        android:id="@+id/fiveYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fiveY"
        app:layout_constraintEnd_toStartOf="@+id/fiveYout"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="285dp" />

    <EditText
        android:id="@+id/tenYout"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveYout" />

    <EditText
        android:id="@+id/twentyfiveYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/twentyfiveY"
        app:layout_constraintEnd_toStartOf="@+id/twentyfiveYout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyYtext" />

    <EditText
        android:id="@+id/thirtyYtext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/thirtyY"
        app:layout_constraintEnd_toStartOf="@+id/thirtyYout"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyfiveYtext" />

    <TextView
        android:id="@+id/debtLenghtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debtlLenghtText"
        app:layout_constraintBottom_toTopOf="@+id/fiveYtext"
        app:layout_constraintEnd_toStartOf="@+id/mountlyPaymentText"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtIn"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/mountlyPaymentText"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/mountlyPaymentText"
        app:layout_constraintBottom_toTopOf="@+id/fiveYout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateIn"
        app:layout_constraintVertical_bias="0.677" />

</androidx.constraintlayout.widget.ConstraintLayout>